--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>ASCAR</title>
 </head>
 <body>
 
@@ -28,13 +28,13 @@
 
     <section class="somos">
         <div class="grilla">
-            <img src="./media/DSC_0656.jpg" alt="">
+            <img src="./media/portada.jpeg" alt="" >
             <div class="redes">
                 <h2>Asociación de <span class="color-a">#Colombianos</span> y <span class="color-b">#Colombianas</span> en Argentina</h2>
             
                 <div class="redes">
-                    <a href=""><img src="media/redes/1.png" alt=""></a>
-                    <a href=""><img src="media/redes/2.png" alt=""></a>
+                    <a href="https://www.instagram.com/civilascar/?hl=es-la"><img src="media/redes/1.png" alt=""></a>
+                    <a href="https://www.facebook.com/civilascar"><img src="media/redes/2.png" alt=""></a>
                     <a href=""><img src="media/redes/3.png" alt=""></a>
                 </div>
             </div>
@@ -44,8 +44,9 @@
 
     <div class="sedes">
         <h3>Nuestras Sedes</h3>
-        <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3580826155644!2d-58.541958615523825!3d-34.69614719254955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9a234d74209%3A0x1e9cebd631c8e0ef!2sASCAR-%20Cardaci%20Sergio%20Damian!5e0!3m2!1ses!2sar!4v1726284112455!5m2!1ses!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1642.6530057647178!2d-58.39557711003092!3d-34.57112276739553!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5683ecf748d%3A0x9d6653f1877715dd!2sSalguero%20F%C3%BAtbol!5e0!3m2!1ses!2sar!4v1730570038796!5m2!1ses!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+
 
     <section class="quienes-somos" id="quienes-somosid">
         <div class="texto-quienes-somos">
@@ -62,7 +63,50 @@
                 sumando herramienta que nos permitan mejorar la calidad de vida de nuestros connacionales mediante 3 valores: Trabajo en equipo, Respeto, Lealtad, Responsabilidad
                 </p>
         </div>
+
+        <div class="lista-valores">
+            <h3>Nuestros Valores</h3>
+            <ul>
+                <li>Trabajo en equipo</li>
+                <li>Respeto</li>
+                <li>Lealtad</li>
+                <li>Responsabilidad</li>
+            </ul>
+        </div>
     </section>
+
+    <div class="impactoTitulo">
+        <h2 class="tituloImpactoSocial">IMPACTO SOCIAL</h2>
+    <section class="impacto">
+        <div class="participantes">
+          <img src="media/impacto/7.png" alt="Ilustracion Arbol" width="100px" height="100px">
+          <h2>Participantes de Actividades</h2>
+          <p>+150</p>
+        </div>
+        <div class="beneficiarios">
+          <img src="media/impacto/8.png" alt="Ilustracion Co2" width="100px" height="100px">
+          <h2>Personas Beneficiarias</h2>
+          <p>+100</p>
+        </div>
+        <div class="niños">
+          <img src="media/impacto/9.png" alt="Ilustracion Co2" width="100px" height="100px">
+          <h2>Población Infantil</h2>
+          <p>+240</p>
+        </div>
+      </section>
+    </div>
+
+    <div class="alianzas">
+        <h3>ALIANZAS</h3>
+        <div class="alianzas-logos">
+            <img src="media/alianzas/1.png" alt="">
+            <img src="media/alianzas/2.png" alt="">
+            <img src="media/alianzas/3.png" alt="">
+            <img src="media/alianzas/4.png" alt="">
+            <img src="media/alianzas/5.png" alt="">
+            <img src="media/alianzas/6.png" alt="">
+        </div>
+    </div>
 
     <div class="tablas" id="tablasid">
         <div class="tablasTxt">
@@ -109,17 +153,15 @@
             <div class="contacto">
                 <ul>
                     <h4>Contacto</h4>
-                    <li><a href="tel:1132325465">+54 5536252</a></li>
-                    <li><a href="mailto:hola@econotesong.org">Email</a></li> <!--Proximamente-->
-                    <li><a href="https://wa.me/+541132325465">Whatsapp</a></li>
+                    <li><a href="tel:+54 9 11 6249-8513">+54 9 11 6249-8513</a></li>
+                    <li><a href="https://wa.me/+54 9 11 6249-8513">Whatsapp</a></li>
                 </ul>
             </div>
-            <div class="redes">
+            <div class="redes-footer">
                 <ul>
                     <h4>Redes</h4>
-                    <li><a target="_blank" href="https://www.instagram.com/econotes.ong/?hl=es">Instagram</a></li>
-                    <li><a target="_blank" href="https://www.linkedin.com/company/eco-notes-ong">LinkedIn</a></li>
-                    <li><a target="_blank" href="https://www.facebook.com/econotes.ong">Facebook</a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/civilascar/?hl=es-la">Instagram</a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/civilascar">Facebook</a></li>
 
                 </ul>
             </div>
